// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Radio Field renders 1`] = `
<RadioField
  customValidation={null}
  disabled={false}
  helpText="The help Text"
  inline={false}
  input={
    Object {
      "name": "fieldName",
      "onBlur": [Function],
      "onChange": [Function],
      "onFocus": [Function],
    }
  }
  label="Radio Test"
  labelKey="label"
  meta={
    Object {
      "form": "formName",
      "pristine": false,
    }
  }
  options={
    Array [
      Object {
        "label": "Option 1",
        "value": "One",
      },
      Object {
        "label": "Option 2",
        "value": "Two",
      },
      Object {
        "label": "Option 3",
        "value": "Three",
      },
    ]
  }
  required={false}
  valueKey="value"
>
  <FormGroup
    bsClass="form-group"
    controlId="fieldName"
  >
    <div
      className="form-group"
    >
      <Label
        label="Radio Test"
        required={false}
      >
        <ControlLabel
          bsClass="control-label"
          srOnly={false}
        >
          <label
            className="control-label"
            htmlFor="fieldName"
          >
            Radio Test
          </label>
        </ControlLabel>
      </Label>
      <InputGroup
        bsClass="input-group"
      >
        <span
          className="input-group"
        >
          <Radio
            bsClass="radio"
            checked={false}
            disabled={false}
            inline={false}
            name="fieldName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            title=""
            value="One"
          >
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="fieldName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="One"
                />
                Option 1
              </label>
            </div>
          </Radio>
          <Radio
            bsClass="radio"
            checked={false}
            disabled={false}
            inline={false}
            name="fieldName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            title=""
            value="Two"
          >
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="fieldName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="Two"
                />
                Option 2
              </label>
            </div>
          </Radio>
          <Radio
            bsClass="radio"
            checked={false}
            disabled={false}
            inline={false}
            name="fieldName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            title=""
            value="Three"
          >
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="fieldName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="Three"
                />
                Option 3
              </label>
            </div>
          </Radio>
        </span>
      </InputGroup>
      <HelpBlock
        bsClass="help-block"
        style={
          Object {
            "minHeight": "6ex",
          }
        }
      >
        <span
          className="help-block"
          style={
            Object {
              "minHeight": "6ex",
            }
          }
        >
          The help Text
        </span>
      </HelpBlock>
    </div>
  </FormGroup>
</RadioField>
`;

exports[`The Radio Field renders with custom options 1`] = `
<RadioField
  customValidation={null}
  disabled={false}
  helpText="The help Text"
  inline={false}
  input={
    Object {
      "name": "fieldName",
      "onBlur": [Function],
      "onChange": [Function],
      "onFocus": [Function],
    }
  }
  label="Radio Test"
  labelKey="foo"
  meta={
    Object {
      "form": "formName",
      "pristine": false,
    }
  }
  options={
    Array [
      Object {
        "bar": "One",
        "foo": "Option 1",
      },
      Object {
        "bar": "Two",
        "foo": "Option 2",
      },
      Object {
        "bar": "Three",
        "foo": "Option 3",
      },
    ]
  }
  required={false}
  valueKey="bar"
>
  <FormGroup
    bsClass="form-group"
    controlId="fieldName"
  >
    <div
      className="form-group"
    >
      <Label
        label="Radio Test"
        required={false}
      >
        <ControlLabel
          bsClass="control-label"
          srOnly={false}
        >
          <label
            className="control-label"
            htmlFor="fieldName"
          >
            Radio Test
          </label>
        </ControlLabel>
      </Label>
      <InputGroup
        bsClass="input-group"
      >
        <span
          className="input-group"
        >
          <Radio
            bsClass="radio"
            checked={false}
            disabled={false}
            inline={false}
            name="fieldName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            title=""
            value="One"
          >
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="fieldName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="One"
                />
                Option 1
              </label>
            </div>
          </Radio>
          <Radio
            bsClass="radio"
            checked={false}
            disabled={false}
            inline={false}
            name="fieldName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            title=""
            value="Two"
          >
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="fieldName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="Two"
                />
                Option 2
              </label>
            </div>
          </Radio>
          <Radio
            bsClass="radio"
            checked={false}
            disabled={false}
            inline={false}
            name="fieldName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            title=""
            value="Three"
          >
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="fieldName"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="Three"
                />
                Option 3
              </label>
            </div>
          </Radio>
        </span>
      </InputGroup>
      <HelpBlock
        bsClass="help-block"
        style={
          Object {
            "minHeight": "6ex",
          }
        }
      >
        <span
          className="help-block"
          style={
            Object {
              "minHeight": "6ex",
            }
          }
        >
          The help Text
        </span>
      </HelpBlock>
    </div>
  </FormGroup>
</RadioField>
`;
